# vip-slap2-analysis

./: README.md
notebooks/: 2026-02-12_DataAccessPattern_Voltage.ipynb  2026-02-12_VoltageData_QC.ipynb
notebooks/analysis/: Activation_analysis.ipynb  FVE-Copy1.ipynb  FVE.ipynb  FVE_rms_dFF.ipynb  MeanResponse_PCA.ipynb  Sequence_analysis.ipynb
notebooks/behavior/: 2026-02-16_ProcessBehavior.ipynb  2026-02-24_ReprocessBehavior.ipynb  2026-03-29_Alignment_comparison.ipynb  ProcessBehavior.ipynb
notebooks/calcium/: Package_calcium.ipynb  Soma_responses.ipynb
notebooks/glutamate/: 2026-02-18_SummarizeLoCo_QuickAccess.ipynb  (+10 more)
src/vip_slap2_analysis/: .gitignore  pyproject.toml
src/vip_slap2_analysis/behavior/: epochs.py  io.py  preprocess.py  read_harp.py  validation.py
src/vip_slap2_analysis/calcium/: extraction.py  qc.py
src/vip_slap2_analysis/common/: qc.py  session.py
src/vip_slap2_analysis/glutamate/: alignment.py  analysis.py  extraction.py  summary.py
src/vip_slap2_analysis/io/: matv73.py  session_registry.py
src/vip_slap2_analysis/metadata/: build_dataset_manifest.py  build_dataset_quality_overview.py
src/vip_slap2_analysis/morphology/: io.py  metrics.py  model.py  plotting.py  session.py  smoothing.py
src/vip_slap2_analysis/packaging/: __init__.py  soma_calcium.py  stimulus_events.py  trial_concat.py
src/vip_slap2_analysis/plotting/: __init__.py  movies.py  plot_session_heatmap.py  plot_utils.py  qc_plots.py
src/vip_slap2_analysis/utils/: reorganize_slap2_session.py  utils.py
src/vip_slap2_analysis/voltage/: postprocess.py  summary.py
(+31 files in other folders)
